data/derived/fa15/progs/unify/prog0273.ml.out
Characters 31-45:
  let stringOfList f l = List.map(sepConcat, l);;
                                 ^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'd
